<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".CategoryActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:textSize="20dp"
        android:text="Please choose a category" />

    <Button
        android:id="@+id/button_food"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/category_food_button" />

    <Button
        android:id="@+id/button_tv"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/category_tv_button" />

    <Button
        android:id="@+id/button_game"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/category_game_button" />

    <Button
        android:id="@+id/button_date"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/category_date_button" />

    <Button
        android:id="@+id/button_boardgame"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/category_boardgame_button" />

    <Button
        android:id="@+id/button_sex"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/category_sex_button" />
</LinearLayout>